<resources>
    <string name="app_name">flashcard.io</string>
    <string name="delete_settings">Delete All Cards</string>
    <string name="count_settings">Count All Cards</string>
    <string name="hint_set">Set Name</string>
    <string name="hint_front">Card Front</string>
    <string name="hint_back">Card Back</string>
    <string name="button_save">Add Card</string>
    <string name="empty_not_saved">Card cannot be empty</string>
    <string name="add_demo_cards">Add Demo Cards</string>
    <string name="settings">Settings</string>
    <string name="delete_cards">Delete Cards</string>
    <string name="start_review">Start Review?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit_cards">Edit Cards</string>
    <string name="explore_set">Explore Set</string>
    <string name="review_game">Review Game</string>
    <string name="rename_set">Rename Set</string>
    <string name="delete_set">Delete Set</string>
    <string name="clone_set">Clone Set</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="current_text">No String Detected</string>
    <string name="scan_front">Scan Front</string>
    <string name="scan_back">Scan Back</string>
    <string name="scan_finish">Finish</string>
</resources>