<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.fsu.cs.mobile.basicactivity.MainActivity">
    <item
        android:id="@+id/delete_all_cards"
        android:orderInCategory="100"
        android:title="@string/delete_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/count_settings"
        android:orderInCategory="100"
        android:title="@string/count_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_demo_cards"
        android:orderInCategory="100"
        android:title="@string/add_demo_cards"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
