<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="?attr/backgroundcolor"
    tools:context="edu.fsu.cs.mobile.testdatabase.OCRActivity">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <TextView
        android:id="@+id/scan_current"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/current_text"
        android:textColor="?attr/textcolor"
        android:background="?attr/cardbackground"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/scan_front"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/scan_front"
        android:textColor="?attr/textcolor"
        android:background="?attr/cardbackground"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/scan_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/scan_back"
        android:textColor="?attr/textcolor"
        android:background="?attr/cardbackground"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/scan_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/scan_finish"
        android:textColor="?attr/textcolor"
        android:background="?attr/cardbackground"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>
